syntax = "proto3";

package video;

option go_package = "./pb";

service VideoRpc {
  rpc GetAuthorId (GetAuthorIdReq) returns (GetAuthorIdResp) {}
  rpc GetVideoListInfo(GetVideoListInfoReq) returns (GetVideoListInfoResp);
}

message GetAuthorIdReq {
  int64 video_id = 1;
}

message GetAuthorIdResp {
  int64 user_id = 1;
}

message GetVideoListInfoReq {
  int64 me_user_id = 1;
  repeated int64 video_id_list = 2;
}

message GetVideoListInfoResp {
  repeated Video video_list = 1;
}

message Video {
  int64 id = 1;
  User user = 2;
  string play_url = 3;
  string cover_url = 4;
  int64 favorite_count = 5;
  int64 comment_count = 6;
  bool is_favorite = 7;
  string title = 8;
  int64 partition = 9;
}
message User {
  int64 id = 1;
  string username = 2;
  int64 follow_count = 3;
  int64 follower_count = 4;
  bool is_follow = 5;
  string avatar = 6;
  string background_image = 7;
  string signature = 8;
  int64 total_favorited = 9;
  int64 work_count = 10;
  int64 favorite_count = 11;
}
